--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,11 +1,27 @@
 .benefits {
-    padding: 94px 0;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width:768px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
     &__list {
     display: flex;
     gap: 30px;
     }
     &__item {
-    width: 270px;
+    width: 100%;
+    padding-bottom: 30px;
+    @media screen and (min-width:768px) {
+        width: calc((100%-30px)/2);
+    }
+    @media screen and (min-width:1200px) {
+        width: calc((100%-90px)/4);
+    }
     }
     &__image {
     @extend %list;
