--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,5 +1,15 @@
 .clients {
     background-color: $main-backgroud-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width:768px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
     &__title {
         margin-bottom: 50px;
         padding-top: 94px;
@@ -13,8 +23,15 @@
         padding-bottom: 94px;
     }
     &__logo {
-        width: 170px;
         height: 92px;
+        width: 100%;
+        width: calc((100%-30px)/2);
+        @media screen and (min-width:768px) {
+            width: calc((100%-60px)/3);
+        }
+        @media screen and (min-width:1200px) {
+            width: calc((100%-150px)/6);
+        }
     }
     &__link {
         width: 100%;
