--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,15 +1,15 @@
 .hero {
     position: relative;
-    padding: 200px 0px;
+    padding: 118px 0px;
     text-align: center;
-    max-width: 1600px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     background-color: $dark-backgroud-color;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/new-foto\ .jpg);
     &__title {
         margin-bottom: 30px;
-        @include font (900, 44px, 1.36, 0.06);
+        @include font (900, 26px, 1.62, 0.06);
         text-transform: uppercase;
         color: $white-color;
     }
