--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,9 +1,22 @@
 .team {
     background-color: $button-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width:768px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
     &__title {
         margin-bottom: 50px;
-        @include font (null,36px, 1.17, null);
+        @include font (null,36px, 1.17, 0.03);
         text-align: center;
+        @media screen and (min-width:768px) {
+            padding-bottom: 30px;
+        }
     }
     &__list {
         display: flex;
@@ -11,7 +24,13 @@
     &__member {
         padding-bottom: 30px;
         background-color: $white-color;
-        width: 270px;
+        width: 100%;
+        @media screen and (min-width:768px) {
+            width: calc((100%-30px)/2);
+        }
+        @media screen and (min-width:1200px) {
+            width: calc((100%-90px)/4);
+        }
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         .team__list &+& {
