--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,11 +1,11 @@
 .benefits {
     padding-top: 60px;
     padding-bottom: 60px;
-    @media screen and (min-width:768px) {
+    @include tablet {
         padding-top: 60px;
         padding-bottom: 60px;
     }
-    @media screen and (min-width:1200px) {
+    @include desktop {
         padding-top: 94px;
         padding-bottom: 94px;
     }
@@ -16,10 +16,10 @@
     &__item {
     width: 100%;
     padding-bottom: 30px;
-    @media screen and (min-width:768px) {
+    @include tablet {
         width: calc((100%-30px)/2);
     }
-    @media screen and (min-width:1200px) {
+    @include desktop {
         width: calc((100%-90px)/4);
     }
     }
