--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,17 +6,49 @@
     margin-left: auto;
     margin-right: auto;
     background-color: $dark-backgroud-color;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/new-foto\ .jpg);
+    background-image: $gradient, 
+        url(/images/hero-bg-mob.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    @include retina {
+        background-image: $gradient, 
+        url(/images/hero-bg-mob-2x.jpg);
+    }
+    @include mobile {
+        background-image: $gradient, 
+        url(/images/hero-bg-tab.jpg);
+        @include retina {
+        background-image: $gradient, 
+        url(/images/hero-bg-tab-2x.jpg);
+        }
+    }
+    @include tablet {
+        background-image: $gradient, 
+        url(/images/new-foto\ .jpg);
+        @include retina {
+        background-image: $gradient, 
+        url(/images/hero-bg-desk-2x.jpg);
+        }
+    }
+    @include desktop {
+        padding-top: 200px;
+        padding-bottom: 200px;
+        max-width: 100%;
+    }
     &__title {
         margin-bottom: 30px;
         @include font (900, 26px, 1.62, 0.06);
         text-transform: uppercase;
         color: $white-color;
+        @media screen and (min-width:1200px) {
+            @include font (900, 44px, 1.36, 0.06);
+        }
     }
     &__button {
         display: block;
         margin: 0 auto;
-        padding: 10px 32px;
+        padding: 10px 24px;
         background-color: $accent-color;
         color: $white-color;
         @include font (700, 16px, 1.88, 0.06);
