--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -8,6 +8,7 @@ $dark-backgroud-color: #2F303A;
 $white-color: #FFFFFF;
 $black-color: #000000;
 $button-color: #F5F4FA;
+$gradient: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4));
 
 .logo {
     font-family: 'Raleway', sans-serif;
