--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,7 +15,8 @@
 @extend %list;
 }
 .site-nav-list {
-display: flex;
+// display: flex;
+display: none;
 }
 .site-nav-list .item:not(:last-child) {
 margin-right: 50px;
@@ -52,8 +53,9 @@ padding: 32px 0px;
     }
 }
 .contact {
-    display: flex;
+    // display: flex;
     margin-left: auto;
+    display: none;
 }
 .contact .item + .item {
     margin-left: 50px;
