--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -94,6 +94,7 @@ padding: 32px 0px;
 
 .mob-menu {
     position: fixed;
+    z-index: 1;
     width: 100vw;
     height: 100vh;
     background-color: $white-color;
@@ -123,6 +124,7 @@ padding: 32px 0px;
 .menu-list {
     display: flex;
     flex-direction: column;
+    margin-bottom: 306px;
 }
 .menu-list__item:not(:last-child) {
     margin-bottom: 32px;
@@ -141,11 +143,13 @@ padding: 32px 0px;
     color: $accent-color;
     font-family: 'Roboto';
     @include font (500, 34px, 1.18, 0.02);
+    margin-bottom: 32px;
 }
 .mob-menu__email {
     color: $p-text-color;
     font-family: 'Roboto';
     @include font (500, 24px, 1.17, 0.02);
+    margin-bottom: 64px;
 }
 .mob-soc {
     display: flex;
@@ -153,6 +157,7 @@ padding: 32px 0px;
 }
 .mob-soc__item:not(:last-child) {
     margin-right: 20px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 .mob-soc__link {
     font-family: 'Roboto';
