--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -25,12 +25,12 @@
     &__logo {
         height: 92px;
         width: 100%;
-        width: calc((100%-30px)/2);
+        width: calc((100% - 30px) / 2);
         @media screen and (min-width:768px) {
-            width: calc((100%-60px)/3);
+            width: calc((100% - 60px) / 3);
         }
         @media screen and (min-width:1200px) {
-            width: calc((100%-150px)/6);
+            width: calc((100% - 150px) / 6);
         }
     }
     &__link {
