--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -12,3 +12,8 @@ body {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
 }
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
