--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -17,10 +17,10 @@
     width: 100%;
     padding-bottom: 30px;
     @include tablet {
-        width: calc((100%-30px)/2);
+        width: calc((100% - 30px) / 2);
     }
     @include desktop {
-        width: calc((100%-90px)/4);
+        width: calc((100% - 90px) / 4);
     }
     }
     &__image {
