--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,10 +2,23 @@
     border: 1px solid #ECECEC;
 }
 .logo {
-    margin-right: 93px;
+    margin-right: 275px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     @include font (null, 26px, 1.19, null);
     color: $accent-color;
     text-decoration: none;
+    @media screen and (min-width: 768px){
+        margin-right: 88px;
+        // padding-top: 16px;
+        // padding-bottom: 16px;
+    }
+
+    @media screen and (min-width: 1200px){
+        margin-right: 93px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 }
 
 .logo-header {
@@ -17,6 +30,10 @@
 .site-nav-list {
 // display: flex;
 display: none;
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+
 }
 .site-nav-list .item:not(:last-child) {
 margin-right: 50px;
@@ -56,19 +73,40 @@ padding: 32px 0px;
     // display: flex;
     margin-left: auto;
     display: none;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+    }
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+    }
 }
 .contact .item + .item {
-    margin-left: 50px;
+    
+    @media screen and (min-width: 1200px) {
+        margin-left: 50px;
+    }
 }
 .contact-item {
     @extend %list;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    
     color: $p-text-color;
     @include font (500, 14px, 1.14, 0.02);
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include tablet {
+        margin-bottom: 10px;
+    }
+    @include desktop {
+        padding-top: 32px;
+        padding-bottom: 32px; 
+    }
 }
+// .contact-item:not(:last-child) {
+//     @media screen and (min-width: 768px) {
+//         margin-bottom: 10px;
+//     }
+// }
 .button-icon {
     margin-right: 10px;
     fill: $p-text-color;
@@ -91,7 +129,23 @@ padding: 32px 0px;
     padding-bottom: 32px;
     fill: $p-text-color;
 }
-
+.menu-button {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    fill: $black-color;
+    background-color: $white-color;
+    border: none;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        fill: $accent-color;
+    }
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
 .mob-menu {
     position: fixed;
     z-index: 1;
@@ -102,9 +156,14 @@ padding: 32px 0px;
     padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
+    > .container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 }
-.container {
-}
+// .container {
+// }
 .menu-close {
     display: block;
     margin-left: auto;
@@ -119,26 +178,27 @@ padding: 32px 0px;
     }
 
 }
-.icon-menu-close {
-}
+// .icon-menu-close {
+// }
 .menu-list {
     display: flex;
     flex-direction: column;
     margin-bottom: 306px;
-}
-.menu-list__item:not(:last-child) {
-    margin-bottom: 32px;
-}
-.menu-list__link {
-    font-family: 'Roboto';
-    color: $black-color;
-    @include font (500, 40px, 1.18, 0.02);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        color: $accent-color;
+    &__item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+    &__link {
+        font-family: 'Roboto';
+        color: $black-color;
+        @include font (500, 40px, 1.18, 0.02);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            color: $accent-color;
+        }
     }
 }
+
 .mob-menu__tel {
     color: $accent-color;
     font-family: 'Roboto';
@@ -154,15 +214,22 @@ padding: 32px 0px;
 .mob-soc {
     display: flex;
     flex-direction: row;
+    &__item:not(:last-child)::after {
+        content: "";
+        width: 22px;
+        height: 0px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        transform: rotate(90deg);
+        margin-left: 10px;
+      }
+    &__link {
+        font-family: 'Roboto';
+        @include font (500, 18px, 1.22, 0.02);
+        color: $accent-color;
+    }
 }
-.mob-soc__item:not(:last-child) {
-    margin-right: 20px;
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
-.mob-soc__link {
-    font-family: 'Roboto';
-    @include font (500, 18px, 1.22, 0.02);
-    color: $accent-color;
-}
-.link {
-}
+// .mob-soc__item:not(:last-child) {
+//     margin-right: 20px;
+//     border-right: 1px solid rgba(33, 33, 33, 0.2);
+// }
+
