--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -22,14 +22,14 @@
         display: flex;
     }
     &__member {
-        padding-bottom: 30px;
+        padding-bottom: 24px;
         background-color: $white-color;
         width: 100%;
         @media screen and (min-width:768px) {
-            width: calc((100%-30px)/2);
+            width: calc((100% - 30px) / 2);
         }
         @media screen and (min-width:1200px) {
-            width: calc((100%-90px)/4);
+            width: calc((100% - 90px) / 4);
         }
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
@@ -50,7 +50,6 @@
         margin-bottom: 16px;
     }   
 }
-
 .member__list {
     display: flex;
     justify-content: center;
