add clients and team

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ img {
       align-items: center;
 }
 
-.footer-button, .footer-input::placeholder, .footer-input, .footer-form, .soc-link, .member__link, .benefits__image, .contact-item, .main-nav, .check-text {
+.footer-button, .footer-input::placeholder, .footer-input, .soc-link, .member__link, .benefits__image, .contact-item, .main-nav, .check-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -766,6 +766,7 @@ body {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   margin-left: 10px;
+  margin-right: 10px;
 }
 .mob-soc__link {
   font-family: "Roboto";
@@ -884,6 +885,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
 }
 .benefits__item {
@@ -1007,6 +1010,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 .team__member {
   padding-bottom: 24px;
@@ -1025,9 +1031,6 @@ body {
   .team__member {
     width: calc((100% - 90px) / 4);
   }
-}
-.team__list .team__member + .team__member {
-  margin-left: 30px;
 }
 .team__name {
   margin-top: 30px;
@@ -1102,12 +1105,20 @@ body {
   }
 }
 .clients__title {
-  margin-bottom: 50px;
-  padding-top: 94px;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: em;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
   text-align: center;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: em;
+  }
 }
 .clients__list {
   display: -webkit-box;
@@ -1116,8 +1127,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
-  padding-bottom: 94px;
 }
 .clients__logo {
   height: 92px;
@@ -1239,41 +1251,63 @@ body {
 }
 
 .footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  padding: 60px 15px;
   background-color: #2F303A;
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    text-align: left;
+  }
 }
 
-.adr {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .adr {
+    display: inline-block;
+    margin-right: 175px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 70px;
+  }
 }
 
 .logo-footer {
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: em;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
   color: #2196F3;
   text-decoration: none;
+}
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: em;
+    text-align: left;
+  }
 }
 
 .logo-footer-secondary {
@@ -1293,6 +1327,7 @@ address {
   color: #FFFFFF;
   font-family: "Roboto";
   font-style: normal;
+  text-align: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -1303,6 +1338,7 @@ address {
 .footer-contact {
   font-family: "Roboto";
   font-style: normal;
+  text-align: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -1316,14 +1352,36 @@ address {
   color: #2196F3;
 }
 
+.social {
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .social {
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .social {
+    margin-right: 90px;
+  }
+}
+
 .soc-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .soc-list {
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
 }
 
 .soc-item {
@@ -1349,16 +1407,24 @@ address {
 
 /*Footer-form*/
 .footer-form {
-  margin-left: 93px;
-  width: 570px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: block;
+  width: 450px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    width: 570px;
+    margin-left: 93px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .footer-input {
   padding: 15px 16px;
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 358px;
   font-family: "Roboto";
   font-weight: 400;
@@ -1411,6 +1477,7 @@ label {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 60px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1418,7 +1485,6 @@ label {
   text-transform: uppercase;
   color: #FFFFFF;
 }
-
 .footer-button {
   margin-left: 12px;
   padding: 10px 28px;
