--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -30,10 +30,9 @@
 .site-nav-list {
 // display: flex;
 display: none;
-    @media screen and (min-width: 768px) {
+    @include tablet {
         display: flex;
     }
-
 }
 .site-nav-list .item:not(:last-child) {
 margin-right: 50px;
@@ -73,17 +72,17 @@ padding: 32px 0px;
     // display: flex;
     margin-left: auto;
     display: none;
-    @media screen and (min-width: 768px) {
+    @include tablet {
         display: flex;
         flex-direction: column;
     }
-    @media screen and (min-width: 1200px) {
+    @include desktop {
         flex-direction: row;
     }
 }
 .contact .item + .item {
     
-    @media screen and (min-width: 1200px) {
+    @include desktop {
         margin-left: 50px;
     }
 }
@@ -102,11 +101,6 @@ padding: 32px 0px;
         padding-bottom: 32px; 
     }
 }
-// .contact-item:not(:last-child) {
-//     @media screen and (min-width: 768px) {
-//         margin-bottom: 10px;
-//     }
-// }
 .button-icon {
     margin-right: 10px;
     fill: $p-text-color;
@@ -221,6 +215,7 @@ padding: 32px 0px;
         border: 1px solid rgba(33, 33, 33, 0.2);
         transform: rotate(90deg);
         margin-left: 10px;
+        margin-right: 10px;
       }
     &__link {
         font-family: 'Roboto';
