--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -20,6 +20,8 @@
     }
     &__list {
         display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
     }
     &__member {
         padding-bottom: 24px;
@@ -33,9 +35,9 @@
         }
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
-        .team__list &+& {
-        margin-left: 30px;
-        } 
+        // .team__list &+& {
+        // margin-left: 30px;
+        // } 
     }
     &__name {
         margin-top: 30px;
