--- a/sass/components/_project-btn.scss
+++ b/sass/components/_project-btn.scss
@@ -1,5 +1,7 @@
 .button {
     display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
     font-family: inherit;
     @include font (500, 16px, 1.63, null);
    
