--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -99,6 +99,7 @@ padding: 32px 0px;
     @include desktop {
         padding-top: 32px;
         padding-bottom: 32px; 
+        margin-bottom: 0;
     }
 }
 .button-icon {
@@ -147,7 +148,6 @@ padding: 32px 0px;
     height: 100vh;
     background-color: $white-color;
     top: 0;
-    padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
     > .container {
